# zkdcap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
circuits/dcap-gnark/: .gitignore  go.mod  go.sum
circuits/dcap-gnark/circuit/: certchain.go  certsig_test.go  chain.go  chain_test.go  chaindiag_test.go  collateral.go  collateral_analyze_test.go  collateral_test.go  crl.go  crl_test.go  dcap.go  dcap_test.go  derive.go  extract.go  extract_test.go  helpers.go  hostecdsa_diag_test.go  layout.go  p256verify_test.go  pckleaf_analyze_test.go  round3_skip_test.go  round4_qe_test.go  scaling_test.go  secure_g2g4g5_test.go  serial_test.go  sha_diag_test.go  tcbextract.go  timing_test.go  types.go
circuits/dcap-gnark/cmd/gen-fixture/: main.go
circuits/dcap-gnark/cmd/journal/: main.go
circuits/dcap-gnark/cmd/keygen/: main.go
circuits/dcap-gnark/cmd/verify/: main.go
circuits/dcap-gnark/cmd/verify-remote/: main.go
circuits/dcap-gnark/witness/: builder.go  quote.go  sgxext.go  types.go
circuits/dcap-noir/: Nargo.toml
circuits/dcap-noir/crates/certlink/: Nargo.toml  Prover.toml
circuits/dcap-noir/crates/certlink/src/: main.nr
circuits/dcap-noir/crates/dcap/: Nargo.toml  Prover.toml
circuits/dcap-noir/crates/dcap/src/: chain.nr  collateral.nr  crl.nr  der.nr  main.nr  parse.nr  steps.nr  tcb.nr
circuits/dcap-noir/crates/p256_one/: Nargo.toml  Prover.toml
circuits/dcap-noir/crates/p256_one/src/: main.nr
circuits/dcap-noir/tools/: build.sh  gencert.go  gendcap.go  genprover.go  genvec.go  run_tests.sh  toml.go
circuits/diff-test/: cross_backend.py
core/: Cargo.toml
core/src/: lib.rs
docs/: prior-art.md
elf/: zkdcap-sp1-guest
examples/dstack-prove/: Cargo.toml
examples/dstack-prove/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: gnark.rs  lib.rs  main.rs  sp1.rs
noir-prove-server/: Cargo.toml  Dockerfile
noir-prove-server/src/: main.rs
sp1-guest/: Cargo.toml
sp1-guest-full/: Cargo.toml
sp1-guest-full/src/: main.rs
sp1-guest/src/: main.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs
test/tests/: prove_and_verify.rs  save_fixtures.rs
verifier/: Cargo.toml  gov-add-vkey.json
verifier/src/: contract.rs  error.rs  msg.rs  state.rs
vkey-converter/: Cargo.toml
vkey-converter/src/: main.rs
