[package]
name = "zkdcap-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkdcap_host"
path = "src/lib.rs"

[[bin]]
name = "zkdcap-host"
path = "src/main.rs"

[dependencies]
zkdcap-core = { path = "../core" }
dcap-qvl = { git = "https://github.com/reliqlabs/dcap-qvl", branch = "feat/cosmwasm", default-features = false, features = ["std", "report", "rustcrypto"] }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
num-bigint = "0.4"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

sp1-sdk = { version = "6.0", features = ["native-gnark", "network"] }
