# Standalone workspace: the surrounding zkdcap workspace carries a sibling
# path-dep (../dcap-qvl) that is not always present, so this prove service is
# its own workspace root and builds independently.
[workspace]

[package]
name = "noir-prove-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
