[package]
name = "zkdcap-sp1-guest-full"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "6.0"
dcap-qvl = { path = "../../dcap-qvl", default-features = false, features = ["std", "sp1"] }
serde = { version = "1", features = ["derive"] }
zkdcap-core = { path = "../core" }
hex = "0.4"

# SP1 precompile patches — replaces pure-Rust crypto with zkVM-accelerated syscalls
[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "aurelien/patch-sha2-v0.10.9" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
