[package]
name = "zkdcap-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sp1-sdk = { version = "6.0", features = ["native-gnark"] }

[dev-dependencies]
zkdcap-core = { path = "../core" }
dcap-qvl = { path = "../../dcap-qvl", default-features = false, features = ["std", "report", "ring", "rustcrypto"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
sp1-build = "6.0"
