[package]
name = "zkdcap-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "3.0", features = ["stargate", "cosmwasm_2_0"] }
cosmwasm-schema = "3.0"
cw-storage-plus = "3"
cw2 = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"
prost = "0.13"
