[package]
name = "zkdcap-vkey-converter"
version = "0.1.0"
edition = "2021"
description = "Convert SP1 Groth16 vkey (gnark format) to SnarkJS JSON for Xion ZK module"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
