[package]
name = "dstack-prove-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
zkdcap-host = { path = "../../host" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
